page of editing and adding gyms

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,4 +2,6 @@ body {
   font-family: sans-serif;
   direction: rtl;
   text-align: center;
+  background: radial-gradient(#555A5F, #000);
+  min-height: 100vh;
 }
