--- a/client/src/styles/Nav.module.css
+++ b/client/src/styles/Nav.module.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: #555;
-  padding: 1em 0;
+  background-color: #58BC6C;
+  line-height: 4em;
   color: #ddd;
 }
 
@@ -8,8 +8,16 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-bar li {
   list-style: none;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: white;
+  font-size: 150%;
 }
